--- a/Roman_Numerals_Converter/templates/index.html
+++ b/Roman_Numerals_Converter/templates/index.html
@@ -47,11 +47,11 @@
     }
 
     .warning {
-      color: red;
+      color: rgb(175, 0, 0);
     }
 
     .footnote{
-      color: rgba(0, 0, 255, 0.712);
+      color: rgba(0, 0, 0, 0.712);
     }
 
   </style>
